--- a/(1).env
+++ b/(1).env
@@ -1,6 +1,6 @@
-api_id=""
-api_hash=""
-bot_token=''
-private_channel_id=-1002076109192
-support_id='@'
-public_channel_username=''
+api_id="23180943"
+api_hash="e89c763a8560766bb99cf6f342aacbef"
+bot_token='7011607845:AAFmQX8OJk7qv4tRWkizsywTJ7VdQrCiCDc'
+private_channel_id=-1002032284214
+support_id='@None'
+public_channel_username='@Account_Mas'
