--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ bot_token='6821384034:AAHGkgDF5AvKnpmOZ4idDzWMLnmnAgqtUMw'
 private_channel_id=-1002032284214
 support_id='@None'
 public_channel_username='@Account_Mas'
+admins= (5373443138)
